comments added for logic

--- a/Online_Fashion_Data_Analysis.ipynb
+++ b/Online_Fashion_Data_Analysis.ipynb
@@ -7309,7 +7309,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 80,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -7522,7 +7522,8 @@
         "all_df.groupby(by=['state', 'product_type']).agg({\n",
         "    'quantity_x': 'sum',\n",
         "    'total_price': 'sum'\n",
-        "})"
+        "})\n",
+        "# note: quantity_x--> quantity of products in the order when sold"
       ]
     },
     {
@@ -7532,7 +7533,7 @@
       },
       "source": [
         "- The pivot table above provides an overview of user preferences for `product_type` by `state`.\n",
-        "- The `Jacket` product type has the highest sales in the states of **New South Wales**, **Queensland**, and **Tasmania**."
+        "- The `Jacket` product type has the highest sales in the states of **New South Wales**, **Queensland**, and **South Australia**."
       ]
     },
     {
@@ -7839,7 +7840,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -7955,6 +7956,7 @@
         }
       ],
       "source": [
+        "# extracting monthly intervals from the order_date\n",
         "monthly_orders_df = all_df.resample(rule='M', on='order_date').agg({\n",
         "    'order_id': 'nunique',\n",
         "    'total_price': 'sum'\n",
@@ -7964,7 +7966,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -8085,6 +8087,7 @@
         }
       ],
       "source": [
+        "# converting the index (which is in full date format) to month name\n",
         "monthly_orders_df.index = monthly_orders_df.index.strftime('%B')\n",
         "monthly_orders_df = monthly_orders_df.reset_index()\n",
         "monthly_orders_df"
@@ -8092,7 +8095,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -8178,6 +8181,7 @@
         }
       ],
       "source": [
+        "# renaming the columns\n",
         "monthly_orders_df.rename(columns={\n",
         "    'order_id': 'order_count',\n",
         "    'total_price': 'revenue'\n",
@@ -8598,7 +8602,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 89,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -8650,7 +8654,7 @@
         "\n",
         "colors = ['#72BCD4', '#D3D3D3', '#D3D3D3', '#D3D3D3', '#D3D3D3']\n",
         "\n",
-        "# Plot pertama\n",
+        "# First plot\n",
         "sns.barplot(\n",
         "    x='quantity_x',\n",
         "    y='product_name',\n",
@@ -8672,7 +8676,7 @@
         "        fontsize=12\n",
         "    )\n",
         "\n",
-        "# Plot kedua\n",
+        "# Second plot\n",
         "asc_sum_order = sum_order_items_df.sort_values(\n",
         "    by='quantity_x', ascending=True\n",
         ").head(5)\n",
@@ -9261,7 +9265,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 96,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -9405,9 +9409,9 @@
       ],
       "source": [
         "rfm_df = all_df.groupby(by='customer_id', as_index=False).agg({\n",
-        "    'order_date': 'max', # mengambil tanggal order terakhir\n",
-        "    'order_id': 'nunique', # menghitung jumlah order\n",
-        "    'total_price': 'sum' # menghitung jumlah revenue yang dihasilkan\n",
+        "    'order_date': 'max', # Gets the most recent order date (Recency)\n",
+        "    'order_id': 'nunique', # Counts the no of unique orders (Frequency)\n",
+        "    'total_price': 'sum' # Calculates the total revenue (Monetary)\n",
         "})\n",
         "\n",
         "rfm_df"
@@ -9415,7 +9419,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 97,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -9483,21 +9487,41 @@
         }
       ],
       "source": [
+        "# renaming the columns\n",
         "rfm_df.columns = ['customer_id', 'max_order_timestamp', 'frequency', 'monetary']\n",
         "rfm_df.head(2)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 98,
+      "execution_count": null,
       "metadata": {
         "id": "h6gjR80lHeR-"
       },
       "outputs": [],
       "source": [
-        "# menghitung kapan terakhir pelanggan melakukan transaksi (hari)\n",
-        "rfm_df['max_order_timestamp'] = rfm_df['max_order_timestamp'].dt.date\n",
-        "recent_date = orders_df['order_date'].dt.date.max()\n",
+        "# Calculating recency in days\n",
+        "# Usually the current_date - last_transaction_date = recency for each customer\n",
+        "\n",
+        "#           --> why not use today's date? ==> The dataset might not be up_to_date today \n",
+        "#           --> We want to analyze the data based on when the data was last recorded --> hence find the recent order_date in general to act as a reference!\n",
+        "\n",
+        "# so we need a reference point(like today's date) to calculate --> \n",
+        "#                               how many days have passed since each customer's last order.\n",
+        "#                           --> So the most recent order date in the entire dataset serves as \"currentdate\" reference.\n",
+        "\n",
+        "\n",
+        "# calculate when the customer last made a transaction (in days) \n",
+        "\n",
+        "# convert max_order_timestamp (datetime column) to date \n",
+        "rfm_df['max_order_timestamp'] = rfm_df['max_order_timestamp'].dt.date # ===> 1) recent date for each customer\n",
+        "\n",
+        "\n",
+        "# 1. Find the most recent order date in the entire dataset\n",
+        "#    This becomes our \"current date\" reference\n",
+        "recent_date = orders_df['order_date'].dt.date.max()  # ===> 2) recent date in general\n",
+        "\n",
+        "# 2. For each customer, calculate days since their last order ====> 2) minus 1)\n",
         "rfm_df['recency'] = rfm_df['max_order_timestamp'].apply(\n",
         "    lambda x: (recent_date - x).days\n",
         ")"
